# cosmic-applet-workspace-windows

./: Cargo.toml  Justfile  README.md
src/: config.rs  lib.rs  wayland.rs
